--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 
 </body>
 <p>We can optimize a solution using 
-	both time and space optimization. To optimize a program,</p>
+	both time and space optimization. To optimize a program,
+</p>
 	<ol>
 		<li>
 			We can reduce the time taken to 
