--- a/main.html
+++ b/main.html
@@ -14,8 +14,9 @@
 <p>We can optimize a solution using 
 	both time and space optimization. To optimize a program,
 </p>
-	<ol>
-		<li>
+	
+		<ol>
+			<li>
 			We can reduce the time taken to 
 		run the program and increase the space occupied
 		</li>
@@ -26,8 +27,9 @@
 		<li>
 			We can reduce both time and space 
 			complexity by deploying relevant algorithms
-		</li>
+		</ol>
 	</ol>
-
+	    <script type="text/javascript" src="./script.js">
+</script>
 	</body>
 </html>
